--- a/css/main.css
+++ b/css/main.css
@@ -71,3 +71,57 @@ a:hover {
 
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
 
+header {
+  display: block;
+  width: 100%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+}
+
+.section__title {
+  font-size: 3.5em;
+}
+
+.header__navigation {
+  padding: 15px;
+}
+
+.header__logo {
+  width: 70px;
+  height: 70px;
+  float: right;
+}
+.header__navigation a{
+  position: relative;
+  top: 20px;
+  padding-right: 35px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+section {
+  padding: 40px;
+}
+.section__header {
+  /*position: relative;
+  top: 100px;*/
+  margin-top: 100px;
+  background-image: url(../assets/images/bg-home.jpg);
+}
+
+.section__header h2 {
+  font-size: 1.5em;
+}
+.section__header .container {
+  height: 100%;
+  padding: 20px;
+}
+
+.background-image {
+  background-size: 100% 100%;
+  height: 580px;
+  text-align: center;
+  color: #fff;
+}
+
